# TinyBlog

./: .gitignore  AGENTS.md  main.db  test_stress.ps1
.github/agents/: backend-architect.agent.md  frontend-qt-designer.agent.md  fullstack-architect.agent.md
.github/skills/aurora-glass/: SKILL.md
.github/skills/dark-mode/: SKILL.md
.github/skills/flat-design/: SKILL.md
.github/skills/fluent-design/: SKILL.md
.github/skills/glassmorphism/: SKILL.md
.github/skills/gradients/: SKILL.md
.github/skills/holographic-foil/: SKILL.md
.github/skills/holographic-gradient/: SKILL.md
.github/skills/material-design/: SKILL.md
.github/skills/minimalism/: SKILL.md
.github/skills/soft-ui/: SKILL.md
deploy/: bc1-setup.sh
docs/: ARCHITECTURE_消息系统.md  BACKEND_ISSUES.md  BACKEND_TODO_消息功能.md  BUG_ANALYSIS_R2_消息功能.md  BUG_ANALYSIS_消息功能.md  FIX_PLAN_R3_消息功能.md  FIX_PLAN_R4_渲染修复.md  FIX_PLAN_R5_消息修复.md  L1_前端.md  L2_桥接.md  L3_后端.md  L4_数据.md
src/backend/: P2_FEATURES.md  blocked_words.txt  fix_data.py  main.db  main.py  main_commented.py  pyproject.toml  routes_social.py  test_messaging.py  test_messaging_report.txt  test_oneway_limit.py  test_r3_follow.py  test_r3_report.txt  test_r4_avatar.py  test_r5_group_fix.py  test_report.txt  test_runner.py  test_stress.py
src/backend/social/: __init__.py  db.py  direct_message.py  groups.py  models.py  notification.py  search.py  social.py
src/frontend/: .qmlls.ini  CMakeLists.txt  CMakePresets.json  ChatPanel.qml  ConversationItem.qml  ConversationListPanel.qml  EmojiIcon.qml  FrostedGlassDemo.qml  GlassCard.qml  LoginFlow.qml  Main.qml  MainPage.qml  MainPage.qml.bak2  MessageBubble.qml  MessagesPage.qml  ProfilePage.qml  SquarePage.qml  VideoPlayerOverlay.qml  VideoWallpaperBg.qml  api_client.cpp  api_client.h  api_types.h  fix-android-deploy.py  fixup_emoji.py  main.cpp  patch-deploy-json.py  resources.qrc  transform_emoji.py
src/frontend/android/: AndroidManifest.xml
src/frontend/translations/: appfrontend_en_US.ts  appfrontend_zh_CN.ts
style/: Fluent Design 2.0.md  Gradients渐变.md  Material Design 系统.md  Soft UI 柔和界面.md  全息渐变.md  全息箔效果.md  平面设计系统.md  极光玻璃.md  极简主义.md  深色模式.md  玻璃态.md
