[project]
name = "TinyBlogBackend"
version = "0.0.0"
description = "The Backend of Tiny Blog."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.32",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
